# Aviate

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  sitl_flight_test.py
aviate/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
aviate-airframes/multirotor/: Cargo.toml
aviate-airframes/multirotor/src/: lib.rs  models.rs
aviate-apps/jmavsim-sitl/: Cargo.toml
aviate-apps/jmavsim-sitl/src/: main.rs
aviate-apps/micoair-h743-v2-test/: Cargo.toml  memory.x  monitor_mavlink.py
aviate-apps/micoair-h743-v2-test/src/: context.rs  example_flight_app.rs  lib.rs  main.rs  mavlink_telemetry.rs  tasks.rs
aviate-apps/quadcopter-sitl/: Cargo.toml
aviate-apps/quadcopter-sitl/src/: config_test.rs  gz_bridge_main.rs  lib.rs  lockstep_test.rs  main.rs  mission_runner.rs  mission_test.rs  multi_vehicle.rs  router_gen.rs  sitl_test.rs  test_config.rs  world_gen.rs
aviate-apps/quadcopter-sitl/tests/: basic_flight.toml  two_vehicle_formation.toml
aviate-apps/quadcopter-sitl/worlds/: x3_quadcopter.sdf  x500_quadcopter.sdf  x500_quadcopter_lockstep.sdf
aviate-apps/quadcopter-stm32h7/: Cargo.toml  build.rs  memory.x
aviate-apps/quadcopter-stm32h7/src/: main.rs
aviate-apps/sitl-gazebo-x500/: AviateApp.toml  Cargo.toml  build.rs
aviate-apps/sitl-gazebo-x500/kernel/: Cargo.toml
aviate-apps/sitl-gazebo-x500/src/: lib.rs  main.rs  mission_runner.rs  multi_vehicle.rs  noise.rs  router_gen.rs  synthesize.rs
aviate-apps/sitl-gazebo-x500/tests/: app_config.rs  x500_kernel.rs
aviate-apps/sitl-jmavsim-generic-quad-x/: Cargo.toml
aviate-apps/sitl-jmavsim-generic-quad-x/kernel/: Cargo.toml
aviate-apps/sitl-jmavsim-generic-quad-x/src/: main.rs
aviate-apps/sitl-jmavsim-generic-quad-x/tests/: x500_kernel.rs
aviate-boards/micoair-h743-v2/: Cargo.toml  layout.lock.json
aviate-boards/micoair-h743-v2-metadata/: Cargo.toml
aviate-boards/micoair-h743-v2-metadata/src/: gpio.rs  lib.rs  status_leds.rs
aviate-boards/micoair-h743-v2/src/: bootloader.rs  drivers.rs  hw.rs  led.rs  lib.rs  panic.rs  security.rs  transport.rs  usb_cdc.rs  watchdog.rs
aviate-boards/pico2/: Cargo.toml
aviate-boards/pico2/src/: lib.rs
aviate-boards/sitl-gazebo/: Cargo.toml  README.md
aviate-boards/sitl-gazebo/src/: lib.rs
aviate-boards/sitl-gazebo/tests/: telemetry_stream.rs  x500_kernel.rs
aviate-boards/sitl-jmavsim/: Cargo.toml
aviate-boards/sitl-jmavsim/src/: lib.rs
aviate-boards/sitl-jmavsim/tests/: x500_kernel.rs
aviate-boards/sitl-x500/: Cargo.toml
aviate-boards/sitl-x500/src/: lib.rs
aviate-boot-core/: Cargo.toml
aviate-boot-core/src/: lib.rs
aviate-bootloader/: Cargo.toml  README.md  build.rs  memory.x
aviate-bootloader/.cargo/: config.toml
aviate-bootloader/src/: board_pins.rs  chip_select.rs  dfu.rs  main.rs
aviate-bootloader/test-app-rp2350/: Cargo.toml  build.rs
aviate-bootloader/test-app-rp2350/.cargo/: config.toml
aviate-bootloader/test-app-rp2350/src/: main.rs
aviate-chips/rp2350/: Cargo.toml
aviate-chips/rp2350/src/: lib.rs
aviate-chips/stm32h743/: Cargo.toml
aviate-chips/stm32h743/src/: app_backend.rs  crash_backend.rs  delay_backend.rs  led_backend.rs  lib.rs  memory.rs  rtc_crash_backend.rs  update_backend.rs
aviate-config/: Cargo.toml
aviate-config/src/: airframe_preset.rs  lib.rs  parser.rs  types.rs  validation.rs
aviate-config/tests/: airframe_preset_tests.rs
aviate-core/: Cargo.toml  README.md  coverage.exclude
aviate-core/src/: airframe.rs  checks.rs  control.rs  ekf.rs  fault.rs  hal.rs  kernel.rs  kernel_logic.rs  kernel_trait.rs  kernel_types.rs  kernel_update.rs  lib.rs  math.rs  mixer.rs  replicable.rs  sensor.rs  state.rs  time.rs  types.rs
aviate-core/src/checks/: in_flight.rs  invariants.rs  kernel_checks.rs  pre_arm.rs  transition.rs
aviate-core/src/control/: attitude.rs  cascade_gains.rs  cascade_tests.rs  enums.rs  envelope.rs  fixed_wing.rs  fw.rs  law_invariants.rs  mc.rs  mode_gate.rs  multirotor.rs  position.rs  rate.rs  runtime.rs  vehicle_control_mode.rs  velocity.rs  velocity_tests.rs  vtol.rs
aviate-core/src/ekf/: predict.rs  replicable.rs  runtime.rs  scalar.rs  update.rs  validity.rs
aviate-core/src/kernel/: builder.rs  config.rs  descend.rs  pipeline.rs  slew.rs  snapshot.rs  state.rs
aviate-core/src/kernel_types/: init_state.rs
aviate-core/src/mixer/: desaturate.rs  desaturate_tests.rs  replicable.rs  sanitizer_impl.rs
aviate-core/src/replicable/: byte_writer.rs
aviate-core/tests/: behavioral_tests.rs  channel_snapshot_tests.rs  config_binding_tests.rs  control_attitude.rs  control_envelope.rs  control_position.rs  control_rate.rs  control_velocity.rs  controller_runtime_state_tests.rs  ekf_error_frame_tests.rs  ekf_reset_recovery_tests.rs  ekf_tests.rs  enum_validation_tests.rs  fault.rs  integration_tests.rs  kernel.rs  math_tests.rs  mc_controller_tests.rs  mcdc_checks.rs  mixer_tests.rs  mock_pipeline_tests.rs  mode_entry_gating_tests.rs  multirotor_controller_tests.rs  prearm_estimator_tests.rs  replicable_tests.rs  slew_limit_tests.rs  types.rs  vtol_controller_tests.rs
aviate-drivers/: Cargo.toml
aviate-drivers/src/: bmi088.rs  bmi270.rs  lib.rs  qmc5883l.rs  spl06.rs
aviate-hal/io/: Cargo.toml  README.md
aviate-hal/io/src/: board_hal.rs  comm.rs  error.rs  fake.rs  lib.rs  security.rs  time_hal.rs  traits.rs  (+3 more)
aviate-hal/stm32h7/: Cargo.toml
aviate-hal/xil/: Cargo.toml  README.md
aviate-link/: Cargo.toml
aviate-link/message_definitions/: README.md  aviate.xml  expected_wire.json
aviate-link/src/: command.rs  errors.rs  lib.rs  mavlink.rs  queue.rs  telemetry.rs
aviate-runtime/: Cargo.toml
aviate-runtime/src/: command_ingress.rs  flight.rs  lib.rs  runner.rs  sensor_cache.rs  sim.rs  telemetry.rs  validation.rs
aviate-runtime/tests/: kernel_gains_source.rs  runner_command_age.rs
aviate-security/: Cargo.toml
aviate-security/src/: anti_replay.rs  auth.rs  errors.rs  gateway.rs  lib.rs  test_support.rs
aviate/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: boards.rs  device.rs  flash_plan.rs  geometry.rs  layout.rs  main.rs  programmer.rs
(+281 files in other folders)
