[workspace]
members = [
    "aviate-core",
    "aviate-drivers",
    "aviate-config",    # Configuration parsing (TOML, low-DAL only)
    "aviate-runtime",   # Control loop, task scheduling, wiring (env-flight/env-sitl/env-hitl)
    "aviate-airframes/multirotor",
    "aviate-airframes/fixed-wing",
    "aviate-hal/io",
    "aviate-hal/xil",
    "aviate-hal/xil/backends/gz",
    "aviate-hal/xil/backends/mavlink-hil",
    "aviate-link",
    "aviate-security",
    "aviate-boards/sitl-gazebo",
    "aviate-boards/sitl-jmavsim",
    "aviate-apps/sitl-gazebo-x500",
    "aviate-apps/sitl-jmavsim-generic-quad-x",
    "tests/lint-verification",
    "tests/gcs-test",
    "xtask",
]
exclude = [
    "external/spl06-007",
    "external/qmc5883l",
    "external/PX4-gazebo-models",
    "aviate-bootloader",              # Separate workspace (different target/memory layout)
    "aviate-boot-core",               # Bootloader-specific protocol layer
    "aviate-chips",                   # Bootloader-specific chip backends
    "aviate-hal/stm32h7",             # Requires thumbv7em target; stm32h7 crate LLVM-rejects host codegen
    "aviate-boards/micoair-h743-v2",  # Requires thumbv7em target via aviate-hal-stm32h7
    "aviate-apps/micoair-h743-v2-test", # Standalone workspace; embedded target only
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.0"
license = "MIT OR Apache-2.0"

[workspace.metadata]
description = "Aviate workspace — see docs/AVIATE_SPEC.md and docs/AVIATE_LANGUAGE_PROFILE.md for constraints."

[workspace.metadata.release]
pre-release-hook = ["./scripts/run_pre_release_checks.sh"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# Workspace-wide lint policy. Members opt in with `lints.workspace = true`
# in their own Cargo.toml. Library crates that cannot comply (e.g. FFI
# shims requiring unsafe) simply omit the opt-in and keep a local stance.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"