[workspace]
members = [
    "aviate",
    "aviate-core",
    "aviate-drivers",
    "aviate-config",    # Configuration parsing (TOML, low-DAL only)
    "aviate-runtime",   # Control loop, task scheduling, wiring (env-flight/env-sitl/env-hitl)
    "aviate-airframes/multirotor",
    "aviate-airframes/fixed-wing",
    "aviate-hal/io",
    "aviate-hal/xil",
    "aviate-hal/xil/backends/gz",
    "aviate-hal/xil/backends/mavlink-hil",
    "aviate-link",  # Note: MAVLink protocol now integrated in aviate-link/src/mavlink/
    "aviate-security",
    "aviate-boards/*",
    # SITL apps only - flight apps have separate workspaces (different target).
    "aviate-apps/sitl-jmavsim-generic-quad-x",
    "aviate-apps/sitl-jmavsim-generic-quad-x/kernel",
    "aviate-apps/sitl-gazebo-x500",
    "aviate-apps/sitl-gazebo-x500/kernel",

    "tests/lint-verification",
    "tests/gcs-test",
    "xtask",
]
exclude = [
    "external/spl06-007",
    "external/qmc5883l",
    "external/PX4-gazebo-models",
    "aviate-bootloader",        # Bootloader has separate workspace (different target/memory layout)
    "aviate-boot-core",         # Bootloader-specific protocol layer
    "aviate-chips",             # Bootloader-specific chip backends
    # Hardware-only crates. Transitively pull in the stm32h7 PAC whose
    # interrupt vector table uses a section attribute that Mach-O/LLVM
    # rejects for host codegen (`cargo test --workspace` links). Excluded
    # from the parent workspace so --workspace commands skip them; CI
    # checks them separately on the thumbv7em target.
    "aviate-hal/stm32h7",
    "aviate-boards/micoair-h743-v2",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.3"
# Minimum supported Rust version — the toolchain CI and the release
# workflow build and test with. Not a floor probed against older
# compilers; raise deliberately.
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/luofang34/Aviate"

[workspace.metadata]
description = "Aviate workspace — see docs/AVIATE_SPEC.md and docs/AVIATE_LANGUAGE_PROFILE.md for constraints."

[workspace.metadata.release]
pre-release-hook = ["./scripts/run_pre_release_checks.sh"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# Workspace-wide lint policy. Members opt in with `lints.workspace = true`
# in their own Cargo.toml. Crates that cannot comply (FFI shims requiring
# unsafe, tooling that uses .unwrap(), test harnesses) omit the opt-in
# and keep a local stance.
#
# `panic`/`unwrap_used`/`expect_used` are `deny`, not `forbid`, so a
# `#[cfg(test)]` module may carry `#[allow(clippy::expect_used,
# clippy::panic)]` for its assertion helpers. `forbid` cannot be relaxed
# locally and therefore collides with those test allows once
# `cargo clippy --all-targets` compiles the test targets. `unsafe_code`
# stays `forbid`: no test needs to opt out of memory safety.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
