[package]
name = "aviate-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
bitflags = "2.4"
libm = "0.2"

[features]
default = ["mc", "fw", "vtol"]
mc = []
fw = []
vtol = []
# `inject_state` / `inject_fault` hooks (spec §20) for out-of-tree SITL
# fault injection. Gated so a flight build never compiles the injector;
# the in-tree behavioral suite stages faults through the public
# `state.faults` surface instead, so it runs in the default `cargo test`.
test-hooks = []

[lib]
path = "src/lib.rs"

[lints]
workspace = true
