[package]
publish = false  # internal crate — not released to crates.io
name = "aviate-link"
version = "0.1.0"
edition = "2021"
authors = ["Aviate Contributors"]
license = "MIT OR Apache-2.0"
description = "Cross-protocol telemetry and command abstraction for Aviate flight control system"
keywords = ["embedded", "telemetry", "mavlink", "flight-control", "no-std"]
categories = ["embedded", "no-std"]

[features]
default = []
# Enable runtime config parsing (requires alloc, pulls in toml crate)
config = ["aviate-config"]

[dependencies]
aviate-core = { path = "../aviate-core" }
aviate-config = { path = "../aviate-config", optional = true }
aviate-hal-io = { path = "../aviate-hal/io" }
# Note: MAVLink protocol is now integrated in src/mavlink/protocol.rs (no external dependency)

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
