[package]
name = "aviate-runtime"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Control loop, task scheduling, and wiring for Aviate apps"

[features]
# Exactly ONE of these must be chosen (enforced by compile_error! in lib.rs)
env-flight = []                                      # Real hardware (DO-178C clean, NO sim code)
# env-sitl/env-hitl chain the `xil-fault` feature on `aviate-hal-xil` so
# the `FaultController` and `FakeSensor::inject_fault` paths are
# active. SITL builds with this feature off would still construct the
# fault controller, but every inbound `FaultCommand` would return
# `AckStatus::NotEnabled` — useless for fault-injection missions.
env-sitl = ["dep:aviate-hal-xil", "aviate-hal-xil/xil-fault", "dep:aviate-config", "aviate-link/config"]
env-hitl = ["dep:aviate-hal-xil", "aviate-hal-xil/xil-fault", "dep:aviate-config", "aviate-link/config"]
default = []                                         # Force explicit choice

[dependencies]
aviate-config = { path = "../aviate-config", optional = true }
aviate-link = { path = "../aviate-link" }
aviate-security = { path = "../aviate-security" }
aviate-core = { path = "../aviate-core" }

# IO traits (TimeHal, TransportHal, Sample) - needed for FlightRunner in all environments
aviate-hal-io = { path = "../aviate-hal/io" }

# Optional: only for sim environments (env-sitl, env-hitl)
aviate-hal-xil = { path = "../aviate-hal/xil", optional = true }
log = "0.4"
