[package]
publish = false  # internal crate — not released to crates.io
name = "aviate-security"
version = "0.1.0"
edition = "2021"
authors = ["Aviate Contributors"]
license = "MIT OR Apache-2.0"
description = "Security policy layer for Aviate flight control system"
keywords = ["embedded", "security", "authentication", "no-std"]
categories = ["embedded", "no-std"]

[features]
default = []
# Grants access to `FailsafeAuthority::acquire`, the capability required to
# mint `TrustedInternalCommand`s. Enabled ONLY by the runtime failsafe
# subsystem; a flight assembly leaves it off everywhere else so ambient
# minting of self-generated commands does not compile.
internal-failsafe = []

[dependencies]
aviate-hal-io = { path = "../aviate-hal/io" }
aviate-link = { path = "../aviate-link" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
