[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serialport = "4.5"
anyhow = "1.0"
regex = "1.10"
sysinfo = "0.30"
cargo_metadata = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
probe-rs = { version = "0.30", default-features = false, features = ["builtin-targets"] }
