[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["hardware"]
# Enable hardware flash support (includes probe-rs for flash geometry)
hardware = ["dep:probe-rs"]

[dependencies]
serialport = "4.5"
anyhow = "1.0"
regex = "1.10"
sysinfo = "0.39"
cargo_metadata = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Optional: Only needed for hardware flash commands (provides chip flash geometry)
probe-rs = { version = "0.31", default-features = false, features = ["builtin-targets"], optional = true }
