[package]
name = "aviate-app-jmavsim-sitl"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "jMAVSim SITL flight controller application"

[[bin]]
name = "jmavsim-sitl"
path = "src/main.rs"

[dependencies]
aviate-board-sitl-jmavsim = { path = "../../aviate-boards/sitl-jmavsim" }
