# Standalone package (not part of main workspace due to different target)
[workspace]

[package]
name = "aviate-app-micoair-h743-v2-test"
edition = "2021"
version = "0.0.0"
license = "MIT OR Apache-2.0"
description = "Hardware validation test for MicoAir H743-V2"

[[bin]]
name = "micoair-h743-v2-test"
path = "src/main.rs"

[features]
default = ["software-bootloader"]
software-bootloader = ["aviate-board-micoair-h743-v2/software-bootloader"]

[dependencies]
aviate-board-micoair-h743-v2 = { path = "../../aviate-boards/micoair-h743-v2" }

# STM32H7 HAL and support
stm32h7xx-hal = { version = "0.16", features = ["stm32h743v", "rt", "usb_hs"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-hal = "1.0"
fugit = "0.3"
nb = "1.1"

# USB CDC for debug output
usb-device = "0.3"
usbd-serial = "0.2"

# Panic handler
panic-halt = "1.0"

# Formatting without std
ufmt = "0.2"

[profile.release]
opt-level = "s"
lto = "thin"
debug = true
codegen-units = 1
