[package]
name = "aviate-app-quadcopter-sitl"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "aviate-app-quadcopter-sitl"
path = "src/main.rs"

[[bin]]
name = "sitl-test"
path = "src/sitl_test.rs"

[lib]
name = "aviate_app_quadcopter_sitl"
path = "src/lib.rs"

[features]
gz-plugin = ["aviate-platform-sitl/gz-plugin"]
multi-vehicle = ["mavrouter", "tokio", "tokio-util", "parking_lot"]
default = []

[dependencies]
aviate-core = { path = "../../aviate-core" }
aviate-mavlink = { path = "../../aviate-mavlink" }
aviate-platform-sitl = { path = "../../aviate-platform/sitl" }

# Multi-vehicle routing (optional)
mavrouter = { version = "0.1.3", optional = true }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"], optional = true }
tokio-util = { version = "0.7", optional = true }
parking_lot = { version = "0.12", optional = true }
