[package]
name = "aviate-app-quadcopter-sitl"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "aviate-app-quadcopter-sitl"
path = "src/main.rs"

[[bin]]
name = "sitl-test"
path = "src/sitl_test.rs"

[lib]
name = "aviate_app_quadcopter_sitl"
path = "src/lib.rs"

[features]
gz-plugin = ["aviate-backend-gz/gz-plugin"]
multi-vehicle = ["mavrouter"]
default = []

[dependencies]
aviate-core = { path = "../../aviate-core" }
aviate-mavlink = { path = "../../aviate-mavlink" }
aviate-platform-xil = { path = "../../aviate-platform/xil" }
aviate-backend-gz = { path = "../../aviate-platform/backends/gz", optional = true }

# Multi-vehicle routing (optional)
# mavrouter 0.1.4 re-exports CancellationToken, RwLock, and brings tokio as transitive dep
mavrouter = { version = "0.1.4", optional = true }
