[package]
name = "aviate-app-quadcopter-sitl"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "aviate-app-quadcopter-sitl"
path = "src/main.rs"

[[bin]]
name = "sitl-test"
path = "src/sitl_test.rs"

[lib]
name = "aviate_app_quadcopter_sitl"
path = "src/lib.rs"

[features]
gz-plugin = ["aviate-backend-gz/gz-plugin", "aviate-board-sitl-x500/gz-plugin"]
multi-vehicle = ["mavrouter"]
default = []

[dependencies]
aviate-core = { path = "../../aviate-core" }
aviate-mavlink = { path = "../../aviate-mavlink" }
aviate-hal-xil = { path = "../../aviate-hal/xil" }
aviate-backend-gz = { path = "../../aviate-hal/xil/backends/gz", optional = true }
aviate-board-sitl-x500 = { path = "../../aviate-boards/sitl-x500" }

# Multi-vehicle routing (optional)
# mavrouter 0.1.4 re-exports CancellationToken, RwLock, and brings tokio as transitive dep
mavrouter = { version = "0.1.4", optional = true }
