[package]
name = "aviate-app-quadcopter-stm32h7"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aviate-core = { path = "../../aviate-core", features = ["mc"] }
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"

[[bin]]
name = "aviate-app-quadcopter-stm32h7"
path = "src/main.rs"