[package]
publish = false  # internal crate — not released to crates.io
name = "aviate-app-sitl-gazebo-x500"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "X500 quadcopter FC binary for the Gazebo SITL board"

[[bin]]
name = "sitl-gazebo-x500"
path = "src/main.rs"

[dependencies]
# Kernel construction is app-owned: the kernel subcrate names the
# airframe, builds the resolved config through the checked builder,
# and this binary injects the result into the board.
aviate-app-sitl-gazebo-x500-kernel = { path = "kernel" }
# The boundary conversion consumes the resolved actuator-curve
# contract (`ActuatorCurveKind::boundary_command`, #140).
aviate-core = { path = "../../aviate-core" }
# The FC re-attaches when the simulator it is bound to is replaced;
# WriterState is the contract's typed answer to "is my writer live?".
aviate-xil-contract = { path = "../../aviate-hal/xil/contract" }
aviate-board-sitl-gazebo = { path = "../../aviate-boards/sitl-gazebo", features = ["gz-plugin"] }
aviate-airframe-multirotor = { path = "../../aviate-airframes/multirotor", features = ["x500"] }
aviate-backend-gz = { path = "../../aviate-hal/xil/backends/gz", features = ["gz-plugin"] }
aviate-hal-xil = { path = "../../aviate-hal/xil" }
log = "0.4"
env_logger = "0.11"
