[package]
name = "aviate-app-sitl-jmavsim-generic-quad-x"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Generic quadcopter on jMAVSim SITL"

[[bin]]
name = "sitl-jmavsim-generic-quad-x"
path = "src/main.rs"

[dependencies]
# Board (brings in aviate-core, aviate-runtime, aviate-hal-xil, backends, etc.)
aviate-board-sitl-jmavsim = { path = "../../aviate-boards/sitl-jmavsim" }

# Airframe selection
aviate-airframe-multirotor = { path = "../../aviate-airframes/multirotor" }

[lints]
workspace = true
