[package]
name = "aviate-app-sitl-jmavsim-generic-quad-x"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Generic quadcopter on jMAVSim SITL"

[[bin]]
name = "sitl-jmavsim-generic-quad-x"
path = "src/main.rs"

[dependencies]
# Kernel construction is app-owned: the app names the airframe,
# builds the resolved config, and injects through the board.
aviate-core = { path = "../../aviate-core" }
aviate-runtime = { path = "../../aviate-runtime", features = ["env-sitl"] }
# Board (brings in aviate-core, aviate-runtime, aviate-hal-xil, backends, etc.)
aviate-board-sitl-jmavsim = { path = "../../aviate-boards/sitl-jmavsim" }

# Airframe selection
aviate-airframe-multirotor = { path = "../../aviate-airframes/multirotor" }

[lints]
workspace = true
