[package]
name = "aviate-board-micoair-h743-v2"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "MicoAir H743-V2 flight controller board family for Aviate"

[lib]
name = "aviate_board_micoair_h743_v2"
path = "src/lib.rs"

[features]
default = []
# Enable software-triggered bootloader entry (uses unsafe code)
# For development/testing only - disable for production builds
software-bootloader = []
# AIO variant with integrated 4x45A ESC (AM32 firmware)
aio = []

[dependencies]
aviate-core = { path = "../../aviate-core" }
aviate-hal-io = { path = "../../aviate-hal/io" }
aviate-hal-stm32h7 = { path = "../../aviate-hal/stm32h7" }
aviate-drivers = { path = "../../aviate-drivers" }

# Bootloader chip backend (optional, for bootloader LED pin definitions)
aviate-chip-stm32h743 = { path = "../../aviate-chips/stm32h743", optional = true }

# STM32H7 HAL
stm32h7xx-hal = { version = "0.16", features = ["stm32h743v", "rt"] }
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0"
fugit = "0.3"

[package.metadata.aviate-board]
chip = "STM32H743VITx"        # probe-rs target name
programmer = "stm32-rom-dfu"  # ROM DFU bootloader (dfu-util)
layout_version = 1            # Schema version
reserve_mode = "auto"         # Dev mode: compute from bootloader size
